--- a/Q03Streams/pom.xml
+++ b/Q03Streams/pom.xml
@@ -7,6 +7,15 @@
     <groupId>com.pcabrantes</groupId>
     <artifactId>streams</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+            <scope>test</scope>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+    </dependencies>
 
 </project>
